--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "Deneme"
 title: "MAT381E"
 description: |
   MAT381E
-output_dir: "_site"
+output_dir: "https://github.com/gulinan/mat381e/_site"
 navbar:
   search: true
   right:
