--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Course Projects"
+    - text: "Fall 21 Course Projects"
       href: project.html
     - icon: fab fa-github
       href: https://github.com/MAT381E-Fall21
